changing colData(se) to se in Rmd files (#312)
* changing colData(se) to se in Rmd files

* making corrections

* shorter notation

* updated transformCounts to transformAssay

--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -23,7 +23,7 @@ For several custom analysis and visualization packages, such as those from
 library(mia)
 data(GlobalPatterns, package="mia")
 tse <- GlobalPatterns
-tse <- transformCounts(tse, MARGIN = "samples", method="relabundance")
+tse <- transformAssay(tse, MARGIN = "samples", method="relabundance")
 molten_tse <- mia::meltAssay(tse,
                         add_row_data = TRUE,
                         add_col_data = TRUE,
@@ -270,7 +270,7 @@ The same action can also be applied to the features.
 
 ```{r}
 # Take only those samples that are collected from feces, skin, or tongue
-tse_genus_sub <- tse_genus[ , colData(tse_genus)$SampleType %in% c("Feces", "Skin", "Tongue")]
+tse_genus_sub <- tse_genus[ , tse_genus$SampleType %in% c("Feces", "Skin", "Tongue")]
 
 tse_genus_sub
 ```
