changed the transformCounts to transformAssay

--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -207,10 +207,9 @@ data("peerj13075", package = "mia")
 tse <- peerj13075
 
 # The result of the CLR transform is stored in the assay clr
-tse <- transformCounts(tse, assay.type = "counts", method = "clr", 
-                       pseudocount = 1)
+tse <- transformAssay(tse, method = "clr", pseudocount = 1)
 
-tse <- transformCounts(tse, assay.type = "clr", method = "z", MARGIN = "features")
+tse <- transformAssay(tse, assay.type = "clr", method = "z", MARGIN = "features")
 
 # Cluster (with euclidean dist) on the features of the z assay 
 tse <- cluster(tse, assay.type = "z",
