--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -108,7 +108,7 @@ transformation (as seen in the previous example).
 
 ```{r hclust2}
 # Apply transformation
-tse <- transformCounts(tse, method = "relabundance")
+tse <- transformAssay(tse, method = "relabundance")
 
 # Do the clustering
 tse <- cluster(tse,
@@ -577,7 +577,7 @@ mae[[1]] <- mae[[1]][, colnames(mae[[2]])]
 rownames(mae[[1]]) <- make.unique(rownames(mae[[1]]))
 
 # Transform the metabolites to be in log basis
-mae[[2]] <- transformCounts(mae[[2]], assay.type = "nmr", method = "log10")
+mae[[2]] <- transformAssay(mae[[2]], assay.type = "nmr", method = "log10")
 
 # Add missing data to the metabolites
 replace_na <- function(row) {
