--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -118,7 +118,6 @@ specified taxonomic rank.
 head(getUniqueTaxa(tse, rank = "Phylum"))
 ```
 
-
 ### Generate a taxonomic tree on the fly {#fly-tree}
 
 To create a taxonomic tree, `taxonomyTree` used the information and returns a
@@ -169,7 +168,10 @@ assay(altExp(tse, "Family"), "counts")[1:5,1:7]
 `altExpNames` now consists of `Family` level data. This can be extended to use 
 any taxonomic level listed in `mia::taxonomyRanks(tse)`.
 
-Rare taxa can also be aggregated into a single group "Other" instead of filtering them out. A suitable function for this is `agglomerateByPrevance`. The number of rare taxa is higher on the species level, which causes the need for data agglomeration by prevalence.
+Rare taxa can also be aggregated into a single group "Other" instead of 
+filtering them out. A suitable function for this is `agglomerateByPrevance`. 
+The number of rare taxa is higher on the species level, which causes the need 
+for data agglomeration by prevalence.
 
 ```{r}
 altExp(tse, "Species_byPrevalence") <- agglomerateByPrevalence(tse, rank = "Species", other_label = "Other", prevalence = 5/100, detection = 1/100, as_relative = T)
@@ -182,7 +184,6 @@ assay(altExp(tse, "Species_byPrevalence"), "relabundance")[88:92, 1:7]
 # Saving the tse for later
 tseGlobalPatterns <- tse
 ```
-
 
 ### Taxa clustering {#taxa-clustering}
 Another way to agglomerate the data is to cluster on the taxa. To do so,
@@ -258,7 +259,6 @@ plot2 <- ggplot(as.data.frame(rowData(tse)), aes(x = clusters_kendall)) +
 plot1 + plot2 + plot_layout(ncol = 2)
 ```
 
-
 It's also possible to merge the rows by cluster.
 
 ```{r taxa_clustering_row_merge}
@@ -278,7 +278,9 @@ such as the centered log-ratio transformation (clr).
 
 In mia package, transformations are applied to abundance data. The transformed 
 abundance table is stored back to 'assays'. mia includes transformation 
-function ('transformAssay()') which applies sample-wise or column-wise transformation when MARGIN = 'samples', feature-wise or row-wise transformation when MARGIN = 'features'.
+function ('transformAssay()') which applies sample-wise or column-wise 
+transformation when MARGIN = 'samples', feature-wise or row-wise transformation 
+when MARGIN = 'features'.
 
 For a complete list of available transformations and parameters, see function 
 [help](https://microbiome.github.io/mia/reference/transformAssay.html).
