--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -30,7 +30,7 @@ to do when using this package is to load it, and transform the data if
 necessary, depending on your analysis goals.
 
 ```{r load_bluster}
-# Load dependencies (remove github dependency in the next bioc release)
+# Load dependencies
 library(bluster)
 
 # Apply transformation
@@ -79,10 +79,10 @@ The hierarchical clustering algorithm aims to find hierarchy between
 samples/features. There are to approaches: agglomerative ("bottom-up")
 and divisive ("top-down").
 
-In agglomerative approach, each observation is first unique cluster.
+In agglomerative approach, each observation is first in a unique cluster.
 The algorithm continues by agglomerating similar clusters. The divisive
 approach starts with one cluster that contains all the observations. 
-Clusters are splitted recursively to clusters that differ the most. 
+Clusters are split recursively to clusters that differ the most. 
 The clustering ends when each cluster contains only one observation. 
 In this algorithm, the similarity of two clusters is based on the distance
 between them.
