--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -186,21 +186,20 @@ tseGlobalPatterns <- tse
 ```
 
 ### Taxa clustering {#taxa-clustering}
-Another way to agglomerate the data is to cluster on the taxa. To do so,
+Another way to agglomerate the data is to cluster the taxa. To do so,
 we usually start by doing a compositionality aware transformation such as CLR, 
-followed by the application of a standard clustering method. 
+followed by the application of a standard clustering method.
 
 Here is an example that does a CLR transformation followed by the hierarchical
 clustering algorithm. 
 
-First, we import the library `bluster` that simplifies the clustering. We
-
+First, we import the library `bluster` that simplifies the clustering.
 ```{r bluster_dependence}
 library(bluster)
 ```
 
 Then we do the CLR transform followed by the clustering. We will cluster with
-two different distances: the euclidean distance and 
+two different distances: the euclidean distance and the kendall distance.
 
 ```{r taxa_clustering}
 # Get the data
@@ -210,9 +209,10 @@ tse <- peerj13075
 # The result of the CLR transform is stored in the assay clr
 tse <- transformAssay(tse, method = "clr", pseudocount = 1)
 
-tse <- transformAssay(tse, assay.type = "clr", method = "z", MARGIN = "features")
+tse <- transformAssay(tse, assay.type = "clr", method = "z", 
+                      MARGIN = "features")
 
-# Cluster (with euclidean dist) on the features of the z assay 
+# Cluster (with euclidean distance) on the features of the z assay 
 tse <- cluster(tse, assay.type = "z",
                clust.col = "hclustEuclidean", MARGIN = "features",
                HclustParam(dist.fun = stats::dist, metric = "euclidean",
@@ -247,7 +247,7 @@ plot the histogram of the clusters.
 
 ```{r taxa_clustering_histogram}
 library(ggplot2)
-library(patchwork) # For arranging several plots as a grid
+library(patchwork) # TO arrange several plots as a grid
 plot1 <- ggplot(as.data.frame(rowData(tse)), aes(x = clusters_euclidean)) + 
     geom_bar() + 
     labs(title = "CAG size distribution (Euclidean distance)",
@@ -266,8 +266,8 @@ It's also possible to merge the rows by cluster.
 tse_merged <- mergeRows(tse, clusters_euclidean)
 tse_merged
 ```
-We can note that it worked as planned since there were 6 clusters and there are
-now 6 rows.
+We can note that it worked as planned since there were 5 clusters and there are
+now 5 rows.
 
 ## Data transformation {#assay-transform}
 
