--- a/24_clustering.Rmd
+++ b/24_clustering.Rmd
@@ -292,7 +292,7 @@ for each model of the k models.
 
 ```{r dmm5}
 library(miaViz)
-plotDMNFit(tse_dmm, type = "laplace")
+plotDMNFit(tse_dmm, type = "laplace", name = "DMM")
 ```
 
 On the graph, we can see that the best number of clusters is 2. We can confirm
